--- a/src/index.html
+++ b/src/index.html
@@ -13,12 +13,26 @@
       </div>
       <div id='second-toolbar'>
         <div class='second-tool'><select id='group-list-select'><option value="List1">List1</option></select></div>
-        <div class='second-tool'><button id='add-del-button' type="button">Add / Del</button></div>
+        <div class='second-tool'><button class='text-btn' id='add-del-button'>Add</button></div>
+        <div class='second-tool'><button class='text-btn' id='reorder-button'>Reorder</button></div>
         <div class='second-tool'><progress id='update-progress' value="0" max="100"></progress></div>
         <div class='second-tool'><button id='update-button' type="button">Update</button></div>
         <div class='second-tool'><button id='manage-button' type="button">Manage</button></div>
       </div>
       <div id='container'>
+        <ul id="list">
+          <li class="header-item">
+            <span class="text">Visit</span>
+          </li>
+          <li class="item">
+            <div class="drag-tab">
+              <div></div>
+              <div></div>
+              <div></div>
+            </div>
+            <span class="text">Visit</span>
+          </li>
+        </ul>
       </div>
     </div>
   </body>
