update UI change

--- a/src/index.html
+++ b/src/index.html
@@ -22,15 +22,25 @@
       <div id='container'>
         <ul id="list">
           <li class="header-item">
+            <div class="non-drag-tab">
+              <div></div><div></div><div></div>
+            </div>
+            <span class="text">Header</span>
+          </li>
+          <li class="item">
+            <!-----<div class="drag-tab">
+              <div></div><div></div><div></div>
+            </div>---->
+            <div class="check-tab">
+              <input type="checkbox" id="a1">
+            </div>
             <span class="text">Visit</span>
           </li>
           <li class="item">
             <div class="drag-tab">
-              <div></div>
-              <div></div>
-              <div></div>
+              <div></div><div></div><div></div>
             </div>
-            <span class="text">Visit</span>
+            <span class="text">AB</span>
           </li>
         </ul>
       </div>
