update UI change

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
       <div id='second-toolbar'>
         <div class='second-tool'><select id='group-list-select'><option value="List1">List1</option></select></div>
         <div class='second-tool'><button class='text-btn' id='add-del-button'>Add</button></div>
+        <div id="add-popup">
+          <p style="padding-left: 5px;line-height: 200%">test</p>
+        </div>
         <div class='second-tool'><button class='text-btn' id='reorder-button'>Reorder</button></div>
         <div class='second-tool'><progress id='update-progress' value="0" max="100"></progress></div>
         <div class='second-tool'><button id='update-button' type="button">Update</button></div>
@@ -25,22 +28,55 @@
             <div class="non-drag-tab">
               <div></div><div></div><div></div>
             </div>
-            <span class="text">Header</span>
+            <span class="list-cell symbol">Symbol</span>
+            <span class="list-cell open">Open</span>
+            <span class="list-cell high">High</span>
+            <span class="list-cell low">Low</span>
+            <span class="list-cell close">Close</span>
+            <span class="list-cell change">Change</span>
+            <span class="list-cell avg-3m">Avg(3m)</span>
+            <span class="list-cell volume">Volume</span>
+            <span class="list-cell avg-3m">Avg(3m)</span>
+            <span class="list-cell strike-price-1y">Strike Price(1y)</span>
+            <span class="list-cell link">Link</span>
           </li>
           <li class="item">
-            <!-----<div class="drag-tab">
-              <div></div><div></div><div></div>
-            </div>---->
             <div class="check-tab">
               <input type="checkbox" id="a1">
             </div>
-            <span class="text">Visit</span>
-          </li>
-          <li class="item">
             <div class="drag-tab">
               <div></div><div></div><div></div>
             </div>
-            <span class="text">AB</span>
+            <span class="list-cell symbol">T</span>
+            <span class="list-cell open">36.65</span>
+            <span class="list-cell high">36.94</span>
+            <span class="list-cell low">36.52</span>
+            <span class="list-cell close">36.90</span>
+            <span class="list-cell change">0.46%</span>
+            <span class="list-cell avg-3m">35.97</span>
+            <span class="list-cell volume">23.21M</span>
+            <span class="list-cell avg-3m">35.00M</span>
+            <span class="list-cell strike-price-1y">32.55 - 41.12</span>
+            <span class="list-cell link"><a href="https://project.zmcx16.moe/">Link</a></span>
+          </li>
+          <li class="item">
+            <div class="check-tab">
+              <input type="checkbox" id="a1">
+            </div>
+            <div class="drag-tab">
+              <div></div><div></div><div></div>
+            </div>
+            <span class="list-cell symbol">PSX</span>
+            <span class="list-cell open">99.37</span>
+            <span class="list-cell high">100.25</span>
+            <span class="list-cell low">99.37</span>
+            <span class="list-cell close">99.72</span>
+            <span class="list-cell change">0.17%</span>
+            <span class="list-cell avg-3m">93.08</span>
+            <span class="list-cell volume">1.293M</span>
+            <span class="list-cell avg-3m">-43.0%</span>
+            <span class="list-cell strike-price-1y">73.85 - 100.25</span>
+            <span class="list-cell link"><a href="https://project.zmcx16.moe/">Link</a></span>
           </li>
         </ul>
       </div>
