--- a/src/index.html
+++ b/src/index.html
@@ -5,24 +5,32 @@
     <script src="app.js"></script>
   </head>
   <body>
-    <div class='main-wrap'>
-      <div id='main-toolbar'>
-        <div class='main-tool'><button id='screen-button' type="button"></button></div>
-        <div class='main-tool'><button id='notifications-button' type="button"></button></div>
-        <div class='main-tool'><button id='setting-button' type="button"></button></div>
+    <div class="main-wrap">
+      <div id="main-toolbar">
+        <div class="main-tool"><button id="screen-button" type="button"></button></div>
+        <div class="main-tool"><button id="notifications-button" type="button"></button></div>
+        <div class="main-tool"><button id="setting-button" type="button"></button></div>
       </div>
-      <div id='second-toolbar'>
-        <div class='second-tool'><select id='group-list-select'><option value="List1">List1</option></select></div>
-        <div class='second-tool'><button class='text-btn' id='add-del-button'>Add</button></div>
+      <div id="second-toolbar">
+        <div class="second-tool"><select id="group-list-select"><option value="List1">List1</option></select></div>
+        <div class="second-tool"><button class="text-btn" id="add-del-button">Add</button></div>
         <div id="add-popup">
-          <p style="padding-left: 5px;line-height: 200%">test</p>
+          <div id="search-bar">
+            <input type="text" id="add-symbol-input" placeholder=" T, GOOG, AAPL" name="search">
+            <svg id="search-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+              <path d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z" fill="#0081f2" />
+              <path d="M0 0h48v48H0z" fill="none" />
+            </svg>
+          </div> 
+          <p class="add-popup-text" style="padding-left: 5px;line-height: 120%">Enter stock symbols</p>
+          <p class="add-popup-text" style="padding-left: 5px;line-height: 120%">Tip: Use comma to separate multiple quotes</p>
         </div>
-        <div class='second-tool'><button class='text-btn' id='reorder-button'>Reorder</button></div>
-        <div class='second-tool'><progress id='update-progress' value="0" max="100"></progress></div>
-        <div class='second-tool'><button id='update-button' type="button">Update</button></div>
-        <div class='second-tool'><button id='manage-button' type="button">Manage</button></div>
+        <div class="second-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
+        <div class="second-tool"><progress id="update-progress" value="0" max="100"></progress></div>
+        <div class="second-tool"><button id="update-button" type="button">Update</button></div>
+        <div class="second-tool"><button id="manage-button" type="button">Manage</button></div>
       </div>
-      <div id='container'>
+      <div id="container">
         <ul id="list">
           <li class="header-item">
             <div class="non-drag-tab">
@@ -42,7 +50,7 @@
           </li>
           <li class="item">
             <div class="check-tab">
-              <input type="checkbox" id="a1">
+              <input type="checkbox" name="stock-checkbox">
             </div>
             <div class="drag-tab">
               <div></div><div></div><div></div>
@@ -61,7 +69,7 @@
           </li>
           <li class="item">
             <div class="check-tab">
-              <input type="checkbox" id="a1">
+              <input type="checkbox" name="stock-checkbox">
             </div>
             <div class="drag-tab">
               <div></div><div></div><div></div>
