Implement UI function

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
         <div class="main-tool"><button id="setting-button" type="button"></button></div>
       </div>
       <div id="second-toolbar">
-        <div class="second-tool"><select id="group-list-select"><option value="List1">List1</option></select></div>
+        <div class="second-tool"><select id="group-list-select"></select></div>
         <div class="second-tool"><button class="text-btn" id="add-del-button">Add</button></div>
         <div id="add-popup">
           <div id="search-bar">
