add get real time stock test rpc

--- a/src/index.html
+++ b/src/index.html
@@ -41,50 +41,12 @@
             <span class="list-cell high">High</span>
             <span class="list-cell low">Low</span>
             <span class="list-cell close">Close</span>
-            <span class="list-cell change">Change</span>
-            <span class="list-cell avg-3m">Avg(3m)</span>
+            <span class="list-cell changeP">Change</span>
+            <span class="list-cell avg3mP">Avg(3m)</span>
             <span class="list-cell volume">Volume</span>
-            <span class="list-cell avg-3m">Avg(3m)</span>
-            <span class="list-cell strike-price-1y">Strike Price(1y)</span>
+            <span class="list-cell avg3mV">Avg(3m)</span>
+            <span class="list-cell strikeP1Y">Strike Price(1y)</span>
             <span class="list-cell link">Link</span>
-          </li>
-          <li class="item">
-            <div class="check-tab">
-              <input type="checkbox" name="stock-checkbox">
-            </div>
-            <div class="drag-tab">
-              <div></div><div></div><div></div>
-            </div>
-            <span class="list-cell symbol">T</span>
-            <span class="list-cell open">36.65</span>
-            <span class="list-cell high">36.94</span>
-            <span class="list-cell low">36.52</span>
-            <span class="list-cell close">36.90</span>
-            <span class="list-cell change">0.46%</span>
-            <span class="list-cell avg-3m">35.97</span>
-            <span class="list-cell volume">23.21M</span>
-            <span class="list-cell avg-3m">35.00M</span>
-            <span class="list-cell strike-price-1y">32.55 - 41.12</span>
-            <span class="list-cell link"><a href="https://project.zmcx16.moe/">Link</a></span>
-          </li>
-          <li class="item">
-            <div class="check-tab">
-              <input type="checkbox" name="stock-checkbox">
-            </div>
-            <div class="drag-tab">
-              <div></div><div></div><div></div>
-            </div>
-            <span class="list-cell symbol">PSX</span>
-            <span class="list-cell open">99.37</span>
-            <span class="list-cell high">100.25</span>
-            <span class="list-cell low">99.37</span>
-            <span class="list-cell close">99.72</span>
-            <span class="list-cell change">0.17%</span>
-            <span class="list-cell avg-3m">93.08</span>
-            <span class="list-cell volume">1.293M</span>
-            <span class="list-cell avg-3m">-43.0%</span>
-            <span class="list-cell strike-price-1y">73.85 - 100.25</span>
-            <span class="list-cell link"><a href="https://project.zmcx16.moe/">Link</a></span>
           </li>
         </ul>
       </div>
