1. add save reorder 2. implement manage button

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,11 @@
         <div class="second-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
         <div class="second-tool"><progress id="update-progress" value="0" max="100"></progress></div>
         <div class="second-tool"><button id="update-button" type="button">Update</button></div>
-        <div class="second-tool"><button id="manage-button" type="button">Manage</button></div>
+        <div class="second-tool"><button class="text-btn" id="manage-button">Manage</button></div>
+        <div id="manage-popup">
+          <p class="manage-popup-text">New Stock List</p>
+          <p class="manage-popup-text">Delete Current List</p>
+        </div>
       </div>
       <div id="container">
         <ul id="list">
