--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,18 @@
           <p class="add-popup-text" style="padding-left: 5px;line-height: 120%">Tip: Use comma to separate multiple quotes</p>
         </div>
         <div class="second-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
-        <div class="second-tool"><progress id="update-progress" value="0" max="100"></progress></div>
-        <div class="second-tool"><button id="update-button" type="button">Update</button></div>
+        <div class="second-tool">
+          <div class="progress">
+            <div class="progress-bar" id="update-progress" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
+              70%
+            </div>
+          </div>
+        </div>
+        <div></div>
+        <div class="second-tool"><button id="update-button" type="button" class="click-btn">Update</button></div>
         <div class="second-tool"><button class="text-btn" id="manage-button">Manage</button></div>
         <div id="manage-popup">
-          <p class="manage-popup-text" id="new-list-button" data-toggle="modal" data-target="#add-new-list-dialog">New Stock List</p>
+          <p class="manage-popup-text" id="new-list-button">New Stock List</p>
           <p class="manage-popup-text" id="del-list-button">Delete Current List</p>
         </div>
       </div>
@@ -55,32 +62,68 @@
             <span class="list-cell volume">Volume</span>
             <span class="list-cell avg3mV">Avg(3m)</span>
             <span class="list-cell strikeP1Y">Strike Price(1y)</span>
-            <span class="list-cell link">Link</span>
+            <span class="list-cell link">Web</span>
           </li>
         </ul>
       </div>
     </div>
-    <div id="add-new-list-dialog" class="modal inmodal fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
+    <div id="input-dialog-hidden-btn" style="display:none;" data-toggle="modal" data-target="#input-dialog"></div>
+    <div id="input-dialog" class="modal inmodal fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
       data-keyboard="true">
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <div class="modal-title ">Create Stock List</div>
-            <div id="add-new-list-invalid" style="display:none;">This List Name is invalid!</div>
-            <button type="button" class="close add-new-list-close" data-dismiss="modal">
+            <div class="modal-title"></div>
+            <div id="input-dialog-content"></div>
+            <div id="input-dialog-text-invalid" style="display:none;"></div>
+            <button type="button" class="close input-dialog-close" data-dismiss="modal">
               <span>&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            <input type="text" id="add-new-list-text" placeholder=" List Name" name="new-list">
+            <input type="text" id="input-dialog-text" name="input-dialog-text-name">
           </div>
           <div class="modal-footer">
-            <button class="btn anime-btn ok-cancel-btn" id="add-new-list-btn">OK</button>
-            <button class="btn anime-btn ok-cancel-btn add-new-list-close" data-dismiss="modal">Cancel</button>
+            <button class="btn anime-btn ok-cancel-btn" id="input-dialog-ok-btn">OK</button>
+            <button class="btn anime-btn ok-cancel-btn input-dialog-close" data-dismiss="modal">Cancel</button>
           </div>
         </div>
       </div>
     </div> 
+    <div id="alert-dialog-hidden-btn" style="display:none;" data-toggle="modal" data-target="#alert-dialog"></div>
+    <div id="alert-dialog" class="modal inmodal fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
+      data-keyboard="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="modal-title"></div>
+            <div id="alert-dialog-content"></div>
+            <button type="button" class="close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="check-dialog-hidden-btn" style="display:none;" data-toggle="modal" data-target="#check-dialog"></div>
+    <div id="check-dialog" class="modal inmodal fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
+      data-keyboard="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="modal-title "></div>
+            <div id="check-dialog-content"></div>
+            <button type="button" class="close  check-dialog-close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-footer">
+            <button class="btn anime-btn ok-cancel-btn" id="check-dialog-ok-btn">OK</button>
+            <button class="btn anime-btn ok-cancel-btn" data-dismiss="modal">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
