--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,31 @@
   <body>
     <div class="main-wrap">
       <div id="main-toolbar">
-        <div class="main-tool"><button id="screen-button" type="button"></button></div>
-        <div class="main-tool"><button id="notifications-button" type="button"></button></div>
-        <div class="main-tool"><button id="setting-button" type="button"></button></div>
+        <!--<div class="main-tool"><button id="screen-button" type="button"></button></div>-->
+        <div class="main-tool">
+          <button id="screen-button" type="button" class="click-btn-v2 main-tool-btn">
+            <svg id="screen-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+              <path d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
+                fill="#0081f2" />
+              <path d="M0 0h48v48H0z" fill="none" />
+            </svg>
+          </button></div>
+        <div class="main-tool">
+          <button id="notifications-button" type="button" class="click-btn-v2 main-tool-btn">
+            <svg id="notifications-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+              <path d="M0 0h48v48H0z" fill="none" />
+              <path d="M2 42h44L24 4 2 42zm24-6h-4v-4h4v4zm0-8h-4v-8h4v8z" fill="#ffd42a" />
+            </svg>
+          </button>
+        </div>
+        <div class="main-tool">
+          <button id="setting-button" type="button" class="click-btn-v2 main-tool-btn">
+            <svg id="setting-icon" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48">
+              <path d="M0 0h48v48H0z" fill="none" />
+              <path d="M38.86 25.95c.08-.64.14-1.29.14-1.95s-.06-1.31-.14-1.95l4.23-3.31c.38-.3.49-.84.24-1.28l-4-6.93c-.25-.43-.77-.61-1.22-.43l-4.98 2.01c-1.03-.79-2.16-1.46-3.38-1.97L29 4.84c-.09-.47-.5-.84-1-.84h-8c-.5 0-.91.37-.99.84l-.75 5.3c-1.22.51-2.35 1.17-3.38 1.97L9.9 10.1c-.45-.17-.97 0-1.22.43l-4 6.93c-.25.43-.14.97.24 1.28l4.22 3.31C9.06 22.69 9 23.34 9 24s.06 1.31.14 1.95l-4.22 3.31c-.38.3-.49.84-.24 1.28l4 6.93c.25.43.77.61 1.22.43l4.98-2.01c1.03.79 2.16 1.46 3.38 1.97l.75 5.3c.08.47.49.84.99.84h8c.5 0 .91-.37.99-.84l.75-5.3c1.22-.51 2.35-1.17 3.38-1.97l4.98 2.01c.45.17.97 0 1.22-.43l4-6.93c.25-.43.14-.97-.24-1.28l-4.22-3.31zM24 31c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z" />
+            </svg>
+          </button>
+        </div>
       </div>
       <div id="second-toolbar">
         <div class="second-tool"><select id="group-list-select"></select></div>
@@ -33,13 +55,13 @@
         <div class="second-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
         <div class="second-tool">
           <div class="progress">
-            <div class="progress-bar" id="update-progress" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-              70%
+            <div class="progress-bar" id="update-progress" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+              0%
             </div>
           </div>
         </div>
         <div></div>
-        <div class="second-tool"><button id="update-button" type="button" class="click-btn">Update</button></div>
+        <div class="second-tool"><button id="update-button" type="button" class="click-btn-v1">Update</button></div>
         <div class="second-tool"><button class="text-btn" id="manage-button">Manage</button></div>
         <div id="manage-popup">
           <p class="manage-popup-text" id="new-list-button">New Stock List</p>
