1. implement notification template 2. add last update time label

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
       require('./node_modules/bootstrap/dist/js/bootstrap.min.js');
     </script>
     <link href="app.css" rel="stylesheet">
+    <script src="common.js"></script>
     <script src="app.js"></script>
   </head>
   <body>
@@ -62,6 +63,7 @@
         </div>
         <div></div>
         <div class="second-tool"><button id="update-button" type="button" class="click-btn-v1">Update</button></div>
+        <div class="second-tool"><span id="last-update-time"></span></div>
         <div class="second-tool"><button class="text-btn" id="manage-button">Manage</button></div>
         <div id="manage-popup">
           <p class="manage-popup-text" id="new-list-button">New Stock List</p>
