add btn css for notification

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
       window.$ = window.jQuery = require('./node_modules/jquery/dist/jquery.min.js');
       require('./node_modules/bootstrap/dist/js/bootstrap.min.js');
     </script>
+    <link href="common.css" rel="stylesheet">
     <link href="app.css" rel="stylesheet">
     <script src="common.js"></script>
     <script src="app.js"></script>
