--- a/src/notification.html
+++ b/src/notification.html
@@ -67,6 +67,29 @@
         </li>
       </ul>
     </div>
+    <div id="edit-dialog-hidden-btn" style="display:none;" data-toggle="modal" data-target="#edit-dialog"></div>
+    <div id="edit-dialog" class="modal inmodal fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
+      data-keyboard="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="modal-title"></div>
+            <div id="edit-dialog-content"></div>
+            <div id="edit-dialog-text-invalid" style="display:none;"></div>
+            <button type="button" class="close edit-dialog-close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <input type="text" id="edit-dialog-text" name="edit-dialog-text-name">
+          </div>
+          <div class="modal-footer">
+            <button class="btn anime-btn ok-cancel-btn" id="edit-dialog-ok-btn">OK</button>
+            <button class="btn anime-btn ok-cancel-btn edit-dialog-close" data-dismiss="modal">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
