--- a/src/notification.html
+++ b/src/notification.html
@@ -18,7 +18,7 @@
       <div class="main-tool"><button class="text-btn" id="del-button">Del</button></div>
       <div class="main-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
       <div class="main-tool"></div>
-      <div class="main-tool"><span id="last-update-time">06/18&nbsp;&nbsp;&nbsp;01:40:18</span></div>
+      <div class="main-tool"><span id="last-update-time"><div class="led-green" id="last-update-time-led"></div>06/18&nbsp;&nbsp;&nbsp;01:40:18</span></div>
     </div>
     <div id="container">
       <ul id="list">
