add setting window

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div></div>
-        <div class="second-tool"><button id="update-button" type="button" class="click-btn-v1">Update</button></div>
+        <div class="second-tool"><button id="update-button" type="button" class="click-btn-v1">Sync</button></div>
         <div class="second-tool"><span id="last-update-time"></span></div>
         <div class="second-tool"><button class="text-btn" id="manage-button">Manage</button></div>
         <div id="manage-popup">
