implement setting page

--- a/src/setting.html
+++ b/src/setting.html
@@ -70,5 +70,9 @@
         </tr>
       </table>
     </fieldset>
+    <div class="footer">
+      <button class="btn anime-btn ok-cancel-btn" id="ok-btn">OK</button>
+      <button class="btn anime-btn ok-cancel-btn" id="cancel-btn">Cancel</button>
+    </div>
   </body>
 </html>
