implement enable sync in main page

--- a/src/setting.html
+++ b/src/setting.html
@@ -66,7 +66,7 @@
         </tr>
         <tr>
           <td class="td-header">Interval: </td>
-          <td class="td-text-label" colspan="2"><input type="text" class="td-text-val" id="interval"/><div class="input-label">(sec)</div></td>
+          <td class="td-text-label" colspan="3"><input type="text" class="td-text-val" id="interval"/><div class="input-label">(sec, min=10)</div></td>
         </tr>
       </table>
     </fieldset>
