--- a/src/notification.html
+++ b/src/notification.html
@@ -15,7 +15,6 @@
   <body>
     <div id="main-toolbar">
       <div class="main-tool"><button class="text-btn" id="add-button">Add</button></div>
-      <div class="main-tool"><button class="text-btn" id="del-button">Del</button></div>
       <div class="main-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
       <div class="main-tool"></div>
       <div class="main-tool"><span id="last-update-time"><div class="led-green" id="last-update-time-led"></div>06/18&nbsp;&nbsp;&nbsp;01:40:18</span></div>
@@ -38,21 +37,16 @@
           <span class="list-cell"></span>
         </li>
         <li class="item stock_T">
-          <div class="status-tab">
-            <div class="led-green"></div>
-            <div class="led-yellow" style="display:none;"></div>
-            <div class="led-grey" style="display:none;"></div>
-          </div>
           <div class="drag-tab" style="display:none;">
             <div></div>
             <div></div>
             <div></div>
           </div>
-          <div class="check-tab-wrap" style="display:none;">
-            <div class="custom-control custom-checkbox check-tab">
-              <input type="checkbox" class="custom-control-input" id="checkbox-T" name="stock-checkbox">
-              <label class="custom-control-label" for="checkbox-T"></label>
-            </div>
+          <div class="list-cell enable">
+            <button id="enable-T" type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false"
+              autocomplete="off">
+              <div class="handle"></div>
+            </button>
           </div>
           <span class="list-cell symbol">T</span>
           <span class="list-cell openP">32</span>
@@ -61,9 +55,7 @@
           <span class="list-cell closeP">32.5</span>
           <span class="list-cell volume">23.71M</span>
           <div class="list-cell edit"><button id="edit-T" type="button" class="click-btn-v1 edit-btn">Edit</button></div>
-          <div class="list-cell enable">
-            <button id="enable-T" type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false" autocomplete="off"><div class="handle"></div></button>
-          </div>
+          <span class="list-cell remove"><button id="remove-T" type="button" class="close"><span>&times;</span></button></span>
         </li>
       </ul>
     </div>
