--- a/src/notification.html
+++ b/src/notification.html
@@ -10,6 +10,7 @@
     <link href="led-light.css" rel="stylesheet">
     <link href="button-toggle.css" rel="stylesheet">
     <link href="notification.css" rel="stylesheet">
+    <script src="common.js"></script>
     <script src="notification.js"></script>
   </head>
   <body>
@@ -32,30 +33,10 @@
           <span class="list-cell highP">High</span>
           <span class="list-cell lowP">Low</span>
           <span class="list-cell closeP">Close</span>
+          <span class="list-cell changeP">Change</span>
           <span class="list-cell volume">Volume</span>
           <span class="list-cell"></span>
           <span class="list-cell"></span>
-        </li>
-        <li class="item stock_T">
-          <div class="drag-tab" style="display:none;">
-            <div></div>
-            <div></div>
-            <div></div>
-          </div>
-          <div class="list-cell enable">
-            <button id="enable-T" type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false"
-              autocomplete="off">
-              <div class="handle"></div>
-            </button>
-          </div>
-          <span class="list-cell symbol">T</span>
-          <span class="list-cell openP">32</span>
-          <span class="list-cell highP">33</span>
-          <span class="list-cell lowP">31</span>
-          <span class="list-cell closeP">32.5</span>
-          <span class="list-cell volume">23.71M</span>
-          <div class="list-cell edit"><button id="edit-T" type="button" class="click-btn-v1 edit-btn">Edit</button></div>
-          <span class="list-cell remove"><button id="remove-T" type="button" class="close"><span>&times;</span></button></span>
         </li>
       </ul>
     </div>
