--- a/src/notification.html
+++ b/src/notification.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div id="main-toolbar">
-      <div class="main-tool"><button class="text-btn" id="add-button">Add</button>
+      <div class="main-tool"><button class="text-btn" id="add-button">Add</button></div>
         <div id="add-popup">
           <div id="search-bar">
             <input type="text" id="add-symbol-input" placeholder=" T, GOOG, AAPL" name="search">
