--- a/src/notification.html
+++ b/src/notification.html
@@ -26,7 +26,9 @@
               <path d="M0 0h48v48H0z" fill="none" />
             </svg>
           </div>
-      </div>
+          <p class="add-popup-text" style="padding-left: 5px;line-height: 120%">Enter stock symbols</p>
+          <p class="add-popup-text" style="padding-left: 5px;line-height: 120%">Tip: Use comma to separate multiple quotes</p>
+        </div>
       <div class="main-tool"><button class="text-btn" id="reorder-button">Reorder</button></div>
       <div class="main-tool"></div>
       <div class="main-tool"><span id="last-update-time"><div class="led-green" id="last-update-time-led"></div>06/18&nbsp;&nbsp;&nbsp;01:40:18</span></div>
