implement notification close function

--- a/src/notification.html
+++ b/src/notification.html
@@ -76,6 +76,25 @@
         </div>
       </div>
     </div>
+    <div id="check-dialog-hidden-btn" style="display:none;" data-toggle="modal" data-target="#check-dialog"></div>
+    <div id="check-dialog" class="modal inmodal fade" tabindex="-1" role="dialog" aria-hidden="true" data-backdrop="static"
+      data-keyboard="true">
+      <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+          <div class="modal-header">
+            <div class="modal-title "></div>
+            <div id="check-dialog-content"></div>
+            <button type="button" class="close  check-dialog-close" data-dismiss="modal">
+              <span>&times;</span>
+            </button>
+          </div>
+          <div class="modal-footer">
+            <button class="btn anime-btn ok-cancel-btn" id="check-dialog-ok-btn">OK</button>
+            <button class="btn anime-btn ok-cancel-btn" data-dismiss="modal">Cancel</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
 
