fix tray menu and status led bug, implement notification function

--- a/src/notification.html
+++ b/src/notification.html
@@ -59,8 +59,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <div class="modal-title"></div>
-            <div id="edit-dialog-content"></div>
+            <div class="modal-title" id="edit-dialog-title"></div>
             <div id="edit-dialog-text-invalid" style="display:none;"></div>
             <button type="button" class="close edit-dialog-close" data-dismiss="modal">
               <span>&times;</span>
@@ -82,8 +81,7 @@
       <div class="modal-dialog modal-lg">
         <div class="modal-content">
           <div class="modal-header">
-            <div class="modal-title "></div>
-            <div id="check-dialog-content"></div>
+            <div class="modal-title " id="check-dialog-title"></div>
             <button type="button" class="close  check-dialog-close" data-dismiss="modal">
               <span>&times;</span>
             </button>
