implement edit menu function

--- a/src/notification.html
+++ b/src/notification.html
@@ -69,15 +69,11 @@
             <div class="modal-body edit-container">
               <div class="edit-menu">
                 <div class="dropdown edit-dropdown">
-                  <button class="btn btn-primary dropdown-toggle" type="button" id="edit-dropdown-btn" data-toggle="dropdown"
+                  <button class="btn btn-secondary2 dropdown-toggle" type="button" id="edit-dropdown-btn" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">
                     Conditions
                   </button>
-                  <div class="dropdown-menu edit" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </div>
+                  <div class="dropdown-menu edit" aria-labelledby="dropdownMenuButton"></div>
                 </div>
                 <div class="edit-args">
                   yyy
