implement notification edit container

--- a/src/notification.html
+++ b/src/notification.html
@@ -76,10 +76,14 @@
                   <div class="dropdown-menu edit" aria-labelledby="dropdownMenuButton"></div>
                 </div>
                 <div class="edit-args">
-                  yyy
+                  <div class="arg-label-text">
+                    <div class="label-input">Start</div><input type="text" class="td-text-val" id="day_start" />
+                  </div>
                 </div>
-                <button class="btn anime-btn ok-cancel-btn" id="edit-add-btn">Add</button>
-                <button class="btn anime-btn ok-cancel-btn" id="edit-clear-btn">Clear</button>
+                <div class="edit-menu-footer">
+                  <button class="btn anime-btn ok-cancel-btn" id="edit-add-btn">Add</button>
+                  <button class="btn anime-btn ok-cancel-btn" id="edit-clear-btn">Clear</button>
+                </div>
               </div>
               <div></div>
               <div class="edit-values">
